# discord-voice-bot

./: .env.example  Dockerfile  Dockerfile.dockerignore  LICENSE  README.md  docker-compose.yml  example.env  main.py  pyproject.toml
cloudflare-worker/: .gitignore  README.md  package-lock.json  package.json  wrangler.jsonc
cloudflare-worker/src/: entry.py
