[project]
name = "discord-voice-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "edge-tts>=7.0.2",
    "miniaudio>=1.61",
    "py-cord[voice]>=2.6.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
]

[tool.uv.sources]
py-cord = { git = "https://github.com/Pycord-Development/pycord", rev = "e1814cce4bb7ed54d970ac5fe6900f8e65bb1879" }
